# retrofy

./: .gitignore  README.md  README_EN.md  buildspec.yml  package.json  pnpm-lock.yaml
.github/workflows/: deploy-frontend.yml  docker-build.yml  pr-preview.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  buildspec.yml  compose.yml  pyproject.toml  requirements.txt
backend/.extentions/: environment.config
backend/app/: add_glitch.py  add_halftone.py  add_noise.py  dithering.py  image_processing.py  main.py  palette_presets.py  schemas.py
backend/app/utils/: add_dithering.py  add_glitch.py  add_halftone.py  add_pixelate.py  apply_dithering.py  dithering.py  image_processing.py  palette_presets.py
frontend/: .env.production  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  enum.ts  error-page.tsx  index.css  main.tsx  store.ts  types.ts  utils.ts
frontend/src/components/: Dashboard.tsx  EnhancementOptions.tsx  FilterOptions.tsx  HoverImage.tsx  ImageBlob.tsx  ImagePreview.tsx  ImageUpload.tsx  ImageUploader.tsx  Logo.tsx  Playground.tsx  ProtectedRoute.tsx  mode-toggle.tsx
frontend/src/components/common/: CloseableButton.tsx
frontend/src/components/dashboard/: CommonSelector.tsx  DitheringSelector.tsx  GenerateButton.tsx  GlitchSelector.tsx  HalftoneSelector.tsx  (+10 more)
frontend/src/lib/: utils.ts
frontend/src/routes/: about.tsx  dashboard.tsx  hello.tsx  index.tsx  root.tsx
frontend/src/services/: api.ts
frontend/src/utils/: useMediaQuery.ts
src/: App.tsx
(+1 files in other folders)
